fixed mutuals spacing

--- a/fluxer_app/src/features/user/components/profile/profile_card/ProfileCardUserInfo.module.css
+++ b/fluxer_app/src/features/user/components/profile/profile_card/ProfileCardUserInfo.module.css
@@ -69,8 +69,8 @@
 }
 
 .belowUsernameSlot {
-	margin-top: 0.375rem;
-	margin-bottom: 0.375rem;
+	margin-top: 0.425rem;
+	margin-bottom: 0.350rem;
 }
 
 .usernameButton {
